--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
                 <form id="form">
                     <div class="form-group">
                       <label for="exampleInputEmail1">Train Name:</label>
-                      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+                      <input type="text" class="form-control" id="train-name" aria-describedby="emailHelp" placeholder="">
                       <small id="emailHelp" class="form-text text-muted"></small>
                     </div>
                     <div class="form-group">
                       <label for="exampleInputPassword1">Destination:</label>
-                      <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+                      <input type="text" class="form-control" id="destination" placeholder="">
                     </div>
                     <div class="form-group">
                         <label for="exampleInputPassword1">First Train Time:</label>
-                        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="24 Hour Time">
+                        <input type="text" class="form-control" id="train-time" placeholder="24 Hour Time">
                       </div>
                       <div class="form-group">
                         <label for="exampleInputPassword1">Frequency (min)</label>
-                        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+                        <input type="text" class="form-control" id="frequency" placeholder="">
                       </div>
                    
                     <button type="submit" id="button-submit" class="btn btn-primary" onclick="submitFunction()">Submit</button>
