--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </div>
                     <div class="form-group">
                         <label for="first-train-input">First Train Time:</label>
-                        <input type="text" class="form-control" id="train-time" placeholder="24 Hour Time">
+                        <input type="text" class="form-control" id="train-time" placeholder="(HH:mm - military time)">
                       </div>
                       <div class="form-group">
                         <label for="frequency-input">Frequency (min)</label>
