--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <!--Moment.js-->
-
+    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
     
     <title>Train Station</title>
 
