--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
     <!--FireBase-->
     <script src="https://www.gstatic.com/firebasejs/6.2.2/firebase-app.js"></script>
-
+    <script src="https://www.gstatic.com/firebasejs/6.2.2/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/6.2.2/firebase-database.js"></script>
 
     <!--Moment.js-->
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
