--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                           Current Train Schedule
                         </div>
                         <div class="card-body">
-                          <table class="table table-hover" id='train-table'>
+                          <table class="table table-hover" id='train-schedule'>
                             <thead>
                               <tr>
                                 <th>Train Name</th>
@@ -68,19 +68,19 @@
                 <form id="form">
                     <div class="form-group">
                       <label for="train-name-input">Train Name:</label>
-                      <input type="text" class="form-control" id="train-name">
+                      <input type="text" class="form-control" id="train-name-input">
                     </div>
                     <div class="form-group">
                       <label for="destination-name-input">Destination:</label>
-                      <input type="text" class="form-control" id="destination">
+                      <input type="text" class="form-control" id="train-destination-input">
                     </div>
                     <div class="form-group">
                         <label for="first-train-input">First Train Time:</label>
-                        <input type="text" class="form-control" id="train-time" placeholder="(HH:mm - military time)">
+                        <input type="text" class="form-control" id="train-time-input" placeholder="(HH:mm - military time)">
                       </div>
                       <div class="form-group">
                         <label for="frequency-input">Frequency (min)</label>
-                        <input type="text" class="form-control" id="frequency">
+                        <input type="text" class="form-control" id="train-frequency-input">
                       </div>
                    
                     <button type="submit" id="button-submit" class="btn btn-primary">Submit</button>
